Work on hashing
Signed-off-by: Jasper Potts <1466205+jasperpotts@users.noreply.github.com>