@@ -16,37 +16,97 @@ import java.util.List;
  * A binary Merkle tree hasher that maintains the full tree in memory. Unlike {@link StreamingHasher}, this
  * implementation stores all leaf hashes and internal node hashes, allowing Merkle paths to be generated for any leaf.
  *
- * <p>The tree structure is stored as levels, where level 0 contains the leaf hashes and each subsequent level contains
- * the parent hashes. This produces the exact same root hash as {@link StreamingHasher}.
+ * <p>The tree is built incrementally as each leaf is added, maintaining all internal nodes. This makes
+ * {@link #computeRootHash()} very efficient (O(k) where k is the number of pending subtree roots, typically log(n))
+ * since the tree structure is already computed.
+ *
+ * <p>The tree structure follows the StreamingHasher algorithm exactly:
+ * <ul>
+ *   <li>Leaves are added left-to-right</li>
+ *   <li>When two sibling nodes are available, they are immediately combined into a parent</li>
+ *   <li>At root computation time, remaining unpaired subtrees are folded right-to-left</li>
+ * </ul>
+ *
+ * <p>This produces the exact same root hash as {@link StreamingHasher}.
  *
  * <p>This is not thread safe; it is assumed to be used by a single thread.
  */
 public class InMemoryTreeHasher implements Hasher {
     /** The hashing algorithm used for computing the hashes. */
     private final MessageDigest digest;
-    /** The tree stored as levels. Level 0 = leaves, level 1 = first internal level, etc. */
+
+    /**
+     * The tree stored as levels. Level 0 = leaf hashes, level 1+ = internal nodes.
+     * Each level stores all nodes at that height in the tree.
+     */
     private final List<List<byte[]>> levels;
-    /** Whether the internal tree structure needs to be rebuilt. */
-    private boolean treeDirty;
+
+    /**
+     * Pending subtree roots that haven't been combined yet.
+     * This mirrors StreamingHasher's hashList - contains roots of complete binary subtrees
+     * that will be folded right-to-left when computing the final root.
+     * Each entry is a pair: [level, index] pointing into the levels structure.
+     */
+    private final List<int[]> pendingSubtreeRoots;
+
+    /** The count of leaves in the tree. */
+    private long leafCount;
 
     /** Create a new InMemoryTreeHasher with an empty state. */
     public InMemoryTreeHasher() {
         digest = sha384Digest();
         levels = new ArrayList<>();
         levels.add(new ArrayList<>()); // Level 0 for leaves
-        treeDirty = false;
+        pendingSubtreeRoots = new ArrayList<>();
+        leafCount = 0;
     }
 
     /**
-     * Add a new leaf to the Merkle tree.
+     * Add a new leaf to the Merkle tree. The tree structure is updated incrementally,
+     * combining nodes bottom-up as complete pairs become available.
      *
      * @param data the data for the new leaf
      */
     @Override
     public void addLeaf(byte[] data) {
+        // Hash the leaf data
         byte[] leafHash = hashLeaf(data);
-        levels.get(0).add(leafHash);
-        treeDirty = true;
+
+        // Add to level 0 (leaves)
+        int leafIndex = levels.getFirst().size();
+        levels.getFirst().add(leafHash);
+
+        // Track this as a pending subtree root (at level 0)
+        pendingSubtreeRoots.add(new int[] {0, leafIndex});
+
+        // Combine nodes bottom-up as long as we have pairs
+        // This mirrors StreamingHasher's logic: combine when (leafCount & 1) == 1
+        long n = leafCount;
+        while ((n & 1L) == 1) {
+            // Pop the last two pending roots and combine them
+            int[] right = pendingSubtreeRoots.removeLast();
+            int[] left = pendingSubtreeRoots.removeLast();
+
+            // Get the hashes
+            byte[] rightHash = levels.get(right[0]).get(right[1]);
+            byte[] leftHash = levels.get(left[0]).get(left[1]);
+
+            // Compute parent hash
+            byte[] parentHash = hashInternalNode(leftHash, rightHash);
+
+            // Add to the next level
+            int parentLevel = right[0] + 1;
+            ensureLevelExists(parentLevel);
+            int parentIndex = levels.get(parentLevel).size();
+            levels.get(parentLevel).add(parentHash);
+
+            // Track the new parent as a pending subtree root
+            pendingSubtreeRoots.add(new int[] {parentLevel, parentIndex});
+
+            n >>= 1;
+        }
+
+        leafCount++;
     }
 
     /**
@@ -56,58 +116,176 @@ public class InMemoryTreeHasher implements Hasher {
      */
     @Override
     public long leafCount() {
-        return levels.get(0).size();
+        return leafCount;
     }
 
     /**
-     * Compute the Merkle tree root hash from the current state. This rebuilds the internal tree structure if needed
-     * but does not prevent additional leaves from being added afterward.
+     * Compute the Merkle tree root hash from the current state. This is efficient because
+     * the tree structure is already built - only the final fold of pending subtree roots
+     * is needed (O(log n) operations).
+     *
+     * <p>This does not modify the internal state, so more leaves can be added afterward.
      *
      * @return the SHA-384 Merkle tree root hash
      */
     @Override
     public byte[] computeRootHash() {
-        if (levels.get(0).isEmpty()) {
+        if (leafCount == 0) {
             throw new IllegalStateException("Cannot compute root hash of empty tree");
         }
-        rebuildTree();
-        // The root is at the top level, single element
-        List<byte[]> topLevel = levels.get(levels.size() - 1);
-        return topLevel.get(0);
+
+        if (pendingSubtreeRoots.size() == 1) {
+            // Only one subtree - its root is the tree root
+            int[] root = pendingSubtreeRoots.getFirst();
+            return levels.get(root[0]).get(root[1]).clone();
+        }
+
+        // Fold pending subtree roots from right to left (matches StreamingHasher)
+        int[] rightmost = pendingSubtreeRoots.getLast();
+        byte[] accumulated = levels.get(rightmost[0]).get(rightmost[1]);
+
+        for (int i = pendingSubtreeRoots.size() - 2; i >= 0; i--) {
+            int[] left = pendingSubtreeRoots.get(i);
+            byte[] leftHash = levels.get(left[0]).get(left[1]);
+            accumulated = hashInternalNode(leftHash, accumulated);
+        }
+
+        return accumulated;
     }
 
     /**
-     * Get the Merkle path (proof) for a leaf at the given index. The path consists of sibling hashes from the leaf up
-     * to the root, along with position indicators (left/right).
+     * Get the Merkle path (proof) for a leaf at the given index. The path consists of sibling hashes
+     * from the leaf up to the root, along with position indicators (left/right).
      *
      * @param leafIndex the index of the leaf (0-based)
      * @return the Merkle path as a list of {@link MerklePathEntry} objects
      * @throws IllegalArgumentException if the leaf index is out of range
      */
     public List<MerklePathEntry> getMerklePath(long leafIndex) {
-        if (leafIndex < 0 || leafIndex >= leafCount()) {
-            throw new IllegalArgumentException("Leaf index " + leafIndex + " out of range [0, " + leafCount() + ")");
+        if (leafIndex < 0 || leafIndex >= leafCount) {
+            throw new IllegalArgumentException("Leaf index " + leafIndex + " out of range [0, " + leafCount + ")");
         }
-        rebuildTree();
 
         List<MerklePathEntry> path = new ArrayList<>();
-        long index = leafIndex;
 
-        // Walk up from the leaf level to the level just below the root
-        for (int level = 0; level < levels.size() - 1; level++) {
-            List<byte[]> currentLevel = levels.get(level);
-            boolean isLeftChild = (index % 2 == 0);
-            long siblingIndex = isLeftChild ? index + 1 : index - 1;
+        // Find which pending subtree this leaf belongs to
+        // and walk up through the stored tree structure
 
-            if (siblingIndex < currentLevel.size()) {
-                // Sibling exists at this level
-                path.add(new MerklePathEntry(currentLevel.get((int) siblingIndex), !isLeftChild));
+        long idx = leafIndex;
+        int currentLevel = 0;
+
+        // Walk up through the complete binary subtree this leaf is part of
+        while (currentLevel < levels.size() - 1 || hasSiblingAtLevel(currentLevel, (int) idx)) {
+            if (currentLevel >= levels.size()) {
+                break;
             }
-            // Move to parent index
-            index = index / 2;
+
+            List<byte[]> level = levels.get(currentLevel);
+            boolean isLeftChild = (idx % 2 == 0);
+            long siblingIdx = isLeftChild ? idx + 1 : idx - 1;
+
+            if (siblingIdx < level.size()) {
+                // Sibling exists in the stored tree
+                path.add(new MerklePathEntry(level.get((int) siblingIdx), !isLeftChild));
+            } else if (isLeftChild) {
+                // No sibling on the right - this node is promoted, check pending roots
+                break;
+            }
+
+            idx = idx / 2;
+            currentLevel++;
         }
 
+        // Handle the fold portion - find siblings from pending subtree roots
+        // This is more complex and depends on which pending subtrees exist
+        addFoldPathEntries(path, leafIndex);
+
         return path;
+    }
+
+    /**
+     * Add path entries for the fold portion of the tree (where pending subtree roots are combined).
+     */
+    private void addFoldPathEntries(List<MerklePathEntry> path, long leafIndex) {
+        if (pendingSubtreeRoots.size() <= 1) {
+            return;
+        }
+
+        // Determine which pending subtree this leaf belongs to
+        int subtreeIndex = findPendingSubtreeForLeaf(leafIndex);
+        if (subtreeIndex < 0) {
+            return;
+        }
+
+        // The fold combines subtrees right-to-left
+        // For a leaf in subtree i, the siblings are the accumulated hashes of subtrees to its right
+        // combined with the hashes of subtrees to its left
+
+        // Compute accumulated hash from the right up to (but not including) this subtree
+        byte[] rightAccumulated = null;
+        for (int i = pendingSubtreeRoots.size() - 1; i > subtreeIndex; i--) {
+            int[] root = pendingSubtreeRoots.get(i);
+            byte[] rootHash = levels.get(root[0]).get(root[1]);
+            if (rightAccumulated == null) {
+                rightAccumulated = rootHash;
+            } else {
+                rightAccumulated = hashInternalNode(rootHash, rightAccumulated);
+            }
+        }
+
+        // Add entries for combining with subtrees to the left
+        if (rightAccumulated != null) {
+            path.add(new MerklePathEntry(rightAccumulated, false)); // right sibling
+        }
+
+        // Add entries for left siblings
+        for (int i = subtreeIndex - 1; i >= 0; i--) {
+            int[] leftRoot = pendingSubtreeRoots.get(i);
+            byte[] leftHash = levels.get(leftRoot[0]).get(leftRoot[1]);
+            path.add(new MerklePathEntry(leftHash, true)); // left sibling
+        }
+    }
+
+    /**
+     * Find which pending subtree contains the given leaf index.
+     */
+    private int findPendingSubtreeForLeaf(long leafIndex) {
+        // Each pending subtree root covers a range of leaves
+        // The subtree at pendingSubtreeRoots[i] covers 2^(level) leaves starting at some offset
+
+        long leafOffset = 0;
+        for (int i = 0; i < pendingSubtreeRoots.size(); i++) {
+            int[] root = pendingSubtreeRoots.get(i);
+            int level = root[0];
+            long subtreeSize = 1L << level; // 2^level leaves in this subtree
+
+            if (leafIndex < leafOffset + subtreeSize) {
+                return i;
+            }
+            leafOffset += subtreeSize;
+        }
+        return -1;
+    }
+
+    /**
+     * Check if there's a sibling at the given level and index.
+     */
+    private boolean hasSiblingAtLevel(int level, int index) {
+        if (level >= levels.size()) {
+            return false;
+        }
+        boolean isLeft = (index % 2 == 0);
+        int siblingIndex = isLeft ? index + 1 : index - 1;
+        return siblingIndex >= 0 && siblingIndex < levels.get(level).size();
+    }
+
+    /**
+     * Ensure the level exists in the levels list.
+     */
+    private void ensureLevelExists(int level) {
+        while (levels.size() <= level) {
+            levels.add(new ArrayList<>());
+        }
     }
 
     /**
@@ -119,7 +297,6 @@ public class InMemoryTreeHasher implements Hasher {
      * @throws IllegalArgumentException if the position is out of range
      */
     public byte[] getHash(int level, int index) {
-        rebuildTree();
         if (level < 0 || level >= levels.size()) {
             throw new IllegalArgumentException("Level " + level + " out of range [0, " + levels.size() + ")");
         }
@@ -132,12 +309,11 @@ public class InMemoryTreeHasher implements Hasher {
     }
 
     /**
-     * Get the number of levels in the tree.
+     * Get the number of levels in the tree (including the leaf level).
      *
-     * @return the number of levels (1 if only leaves, more if internal nodes exist)
+     * @return the number of levels
      */
     public int levelCount() {
-        rebuildTree();
         return levels.size();
     }
 
@@ -148,7 +324,6 @@ public class InMemoryTreeHasher implements Hasher {
      * @return the number of hashes at that level
      */
     public int hashCountAtLevel(int level) {
-        rebuildTree();
         if (level < 0 || level >= levels.size()) {
             throw new IllegalArgumentException("Level " + level + " out of range [0, " + levels.size() + ")");
         }
@@ -156,23 +331,44 @@ public class InMemoryTreeHasher implements Hasher {
     }
 
     /**
-     * Save the current tree state to a binary file. All hashes at all levels are saved.
+     * Get the number of pending subtree roots. For a power-of-2 leaf count, this will be 1.
+     * For other counts, this equals the number of 1-bits in the binary representation of the leaf count.
+     *
+     * @return the number of pending subtree roots
+     */
+    public int pendingSubtreeCount() {
+        return pendingSubtreeRoots.size();
+    }
+
+    /**
+     * Save the current tree state to a binary file. All hashes at all levels are saved,
+     * along with the pending subtree root pointers.
      *
      * @param filePath the path to the file where the state will be saved
      * @throws Exception if an I/O error occurs
      */
     @Override
     public void save(Path filePath) throws Exception {
-        rebuildTree();
         try (DataOutputStream out = new DataOutputStream(Files.newOutputStream(filePath))) {
+            // Write leaf count
+            out.writeLong(leafCount);
+
             // Write number of levels
             out.writeInt(levels.size());
+
             // Write each level
             for (List<byte[]> level : levels) {
                 out.writeInt(level.size());
                 for (byte[] hash : level) {
                     out.write(hash);
                 }
+            }
+
+            // Write pending subtree roots
+            out.writeInt(pendingSubtreeRoots.size());
+            for (int[] root : pendingSubtreeRoots) {
+                out.writeInt(root[0]); // level
+                out.writeInt(root[1]); // index
             }
         }
     }
@@ -186,6 +382,10 @@ public class InMemoryTreeHasher implements Hasher {
     @Override
     public void load(Path filePath) throws Exception {
         try (DataInputStream din = new DataInputStream(Files.newInputStream(filePath))) {
+            // Read leaf count
+            leafCount = din.readLong();
+
+            // Read levels
             int levelCount = din.readInt();
             levels.clear();
             for (int l = 0; l < levelCount; l++) {
@@ -198,411 +398,14 @@ public class InMemoryTreeHasher implements Hasher {
                 }
                 levels.add(level);
             }
-            treeDirty = false;
-        }
-    }
 
-    /**
-     * Rebuild the internal tree structure from the leaves. Uses the same algorithm as {@link StreamingHasher} to
-     * produce identical root hashes.
-     */
-    private void rebuildTree() {
-        if (!treeDirty) {
-            return;
-        }
-
-        List<byte[]> leaves = levels.get(0);
-        if (leaves.isEmpty()) {
-            treeDirty = false;
-            return;
-        }
-
-        // Clear all internal levels (keep level 0 = leaves)
-        while (levels.size() > 1) {
-            levels.remove(levels.size() - 1);
-        }
-
-        // Build tree using StreamingHasher algorithm to get identical results
-        // We need to mimic the exact same computation order
-        List<byte[]> currentLevel = new ArrayList<>(leaves);
-
-        while (currentLevel.size() > 1) {
-            List<byte[]> nextLevel = new ArrayList<>();
-
-            // Process pairs from left to right
-            int i = 0;
-            while (i < currentLevel.size()) {
-                if (i + 1 < currentLevel.size()) {
-                    // Two nodes to combine
-                    byte[] combined = hashInternalNode(currentLevel.get(i), currentLevel.get(i + 1));
-                    nextLevel.add(combined);
-                    i += 2;
-                } else {
-                    // Odd node - promote to next level
-                    nextLevel.add(currentLevel.get(i));
-                    i++;
-                }
-            }
-
-            levels.add(nextLevel);
-            currentLevel = nextLevel;
-        }
-
-        // If only one leaf, we still need a root level
-        if (levels.size() == 1 && leaves.size() == 1) {
-            // Single leaf is the root
-            // No additional level needed, but let's verify this matches StreamingHasher
-            // StreamingHasher with 1 leaf: hashList = [leafHash], computeRootHash returns hashList.getLast() = leafHash
-            // So we're correct - the leaf hash is the root
-        }
-
-        // Handle the special computation order from StreamingHasher
-        // StreamingHasher computes root by folding from right to left at the end
-        // We need to match this exactly
-        if (leaves.size() > 1) {
-            recomputeRootMatchingStreamingHasher();
-        }
-
-        treeDirty = false;
-    }
-
-    /**
-     * Recompute the tree structure to match StreamingHasher's algorithm exactly.
-     *
-     * <p>StreamingHasher builds incrementally: when adding leaf i, it combines hashes bottom-up as long as the
-     * current index has its lowest bit set. At the end, computeRootHash folds the remaining hashes from right to left.
-     *
-     * <p>This creates a specific tree structure that we need to match.
-     */
-    private void recomputeRootMatchingStreamingHasher() {
-        List<byte[]> leaves = levels.get(0);
-        int n = leaves.size();
-
-        // Clear all internal levels
-        while (levels.size() > 1) {
-            levels.remove(levels.size() - 1);
-        }
-
-        // Simulate StreamingHasher to build the same intermediate state
-        List<byte[]> hashList = new ArrayList<>();
-
-        for (int i = 0; i < n; i++) {
-            hashList.add(leaves.get(i));
-            for (long idx = i; (idx & 1L) == 1; idx >>= 1) {
-                byte[] y = hashList.remove(hashList.size() - 1);
-                byte[] x = hashList.remove(hashList.size() - 1);
-                hashList.add(hashInternalNode(x, y));
-            }
-        }
-
-        // Now hashList contains the intermediate state
-        // computeRootHash folds from right to left:
-        // merkleRootHash = hashList.getLast()
-        // for i = size-2 down to 0: merkleRootHash = hashInternalNode(hashList[i], merkleRootHash)
-
-        // Build a proper tree structure from this
-        // The tree structure is implicit in how hashes were combined
-        // For simplicity, we rebuild a traditional balanced tree but track the special folding
-
-        // Actually, let's build the tree structure that represents the actual computation
-        // We need to store internal hashes at each level for getMerklePath to work
-
-        buildTreeStructure(leaves);
-    }
-
-    /**
-     * Build the tree structure that matches StreamingHasher's computation.
-     *
-     * <p>The StreamingHasher uses a specific Merkle tree construction where leaves are processed left-to-right and
-     * combined as soon as two siblings are available. Remaining unpaired nodes are folded right-to-left at the end.
-     */
-    private void buildTreeStructure(List<byte[]> leaves) {
-        // Clear internal levels
-        while (levels.size() > 1) {
-            levels.remove(levels.size() - 1);
-        }
-
-        if (leaves.size() <= 1) {
-            return;
-        }
-
-        // Determine tree height
-        int height = 0;
-        int temp = leaves.size();
-        while (temp > 1) {
-            temp = (temp + 1) / 2;
-            height++;
-        }
-
-        // Build level by level
-        // The tree is a "left-complete" binary tree where:
-        // - At each level, we pair nodes from left to right
-        // - If odd number, the rightmost node is promoted without pairing
-
-        List<byte[]> currentLevel = leaves;
-        for (int h = 0; h < height; h++) {
-            List<byte[]> nextLevel = new ArrayList<>();
-
-            int i = 0;
-            while (i < currentLevel.size()) {
-                if (i + 1 < currentLevel.size()) {
-                    // Pair and hash
-                    nextLevel.add(hashInternalNode(currentLevel.get(i), currentLevel.get(i + 1)));
-                    i += 2;
-                } else {
-                    // Odd node - but in StreamingHasher this gets folded differently
-                    // The rightmost unpaired hash at each level gets combined with the accumulated hash from the right
-                    nextLevel.add(currentLevel.get(i));
-                    i++;
-                }
-            }
-
-            levels.add(nextLevel);
-            currentLevel = nextLevel;
-        }
-
-        // At this point we have a standard left-complete tree
-        // But StreamingHasher's final folding might produce a different root
-        // Let's verify and adjust if needed
-
-        // Compute what StreamingHasher would produce
-        byte[] streamingRoot = computeStreamingHasherRoot(leaves);
-
-        // Compare with our current root
-        List<byte[]> topLevel = levels.get(levels.size() - 1);
-        if (topLevel.size() == 1) {
-            byte[] ourRoot = topLevel.get(0);
-            if (!java.util.Arrays.equals(ourRoot, streamingRoot)) {
-                // Our simple approach doesn't match - need to use the streaming algorithm's structure
-                rebuildWithStreamingStructure(leaves, streamingRoot);
-            }
-        } else {
-            // Multiple roots at top level - need to fold them
-            rebuildWithStreamingStructure(leaves, streamingRoot);
-        }
-    }
-
-    /**
-     * Compute what StreamingHasher would produce for the given leaves.
-     */
-    private byte[] computeStreamingHasherRoot(List<byte[]> leaves) {
-        List<byte[]> hashList = new ArrayList<>();
-
-        for (int i = 0; i < leaves.size(); i++) {
-            hashList.add(leaves.get(i));
-            for (long idx = i; (idx & 1L) == 1; idx >>= 1) {
-                byte[] y = hashList.remove(hashList.size() - 1);
-                byte[] x = hashList.remove(hashList.size() - 1);
-                hashList.add(hashInternalNode(x, y));
-            }
-        }
-
-        byte[] merkleRootHash = hashList.get(hashList.size() - 1);
-        for (int i = hashList.size() - 2; i >= 0; i--) {
-            merkleRootHash = hashInternalNode(hashList.get(i), merkleRootHash);
-        }
-        return merkleRootHash;
-    }
-
-    /**
-     * Rebuild the tree structure to match StreamingHasher exactly. This stores the actual internal nodes computed
-     * during the streaming process plus the final fold operations.
-     */
-    private void rebuildWithStreamingStructure(List<byte[]> leaves, byte[] expectedRoot) {
-        // Clear internal levels
-        while (levels.size() > 1) {
-            levels.remove(levels.size() - 1);
-        }
-
-        if (leaves.size() <= 1) {
-            return;
-        }
-
-        // We need to build a tree where:
-        // 1. Internal nodes from streaming incremental combines are stored
-        // 2. The final fold operations are also represented
-
-        // The key insight: StreamingHasher builds a forest of perfect binary trees
-        // then folds them right-to-left at the end
-
-        // For Merkle paths, we need to track which nodes are siblings at each level
-
-        // Let's build level by level, tracking the structure properly
-        // At each level, we store the internal nodes produced by combining pairs
-
-        // Level 0: leaves
-        // Level 1: combines of adjacent pairs at level 0, processed during streaming
-        // etc.
-
-        // Track how many leaves form complete subtrees
-        // A complete subtree at height h has 2^h leaves
-
-        int n = leaves.size();
-
-        // Build a map of all internal nodes by their position
-        // Position is (level, index within level)
-        // We'll use arrays of lists
-
-        List<List<byte[]>> treeLevels = new ArrayList<>();
-        treeLevels.add(new ArrayList<>(leaves));
-
-        // Simulate the streaming build to capture all internal nodes
-        // The streaming algorithm combines nodes bottom-up as they become complete pairs
-
-        // Alternative approach: build a standard nearly-complete binary tree
-        // but handle the root computation specially
-
-        // For each level, pair nodes left-to-right
-        List<byte[]> currentLevel = new ArrayList<>(leaves);
-
-        while (currentLevel.size() > 1) {
-            List<byte[]> nextLevel = new ArrayList<>();
-
-            for (int i = 0; i < currentLevel.size(); i += 2) {
-                if (i + 1 < currentLevel.size()) {
-                    nextLevel.add(hashInternalNode(currentLevel.get(i), currentLevel.get(i + 1)));
-                } else {
-                    // Unpaired node
-                    nextLevel.add(currentLevel.get(i));
-                }
-            }
-
-            treeLevels.add(nextLevel);
-            currentLevel = nextLevel;
-        }
-
-        // The simple approach produces a nearly-complete binary tree
-        // But StreamingHasher folds remaining hashes right-to-left
-        // This creates a different structure for non-power-of-2 leaf counts
-
-        // Check if simple approach matches
-        if (treeLevels.get(treeLevels.size() - 1).size() == 1) {
-            byte[] simpleRoot = treeLevels.get(treeLevels.size() - 1).get(0);
-            if (java.util.Arrays.equals(simpleRoot, expectedRoot)) {
-                // Simple approach works!
-                this.levels.clear();
-                this.levels.addAll(treeLevels);
-                return;
-            }
-        }
-
-        // Need to handle the right-to-left folding
-        // The streaming algorithm creates a different tree structure
-
-        // For now, store the simple tree structure
-        // The root won't match, but we need to add additional levels for the fold
-
-        // Actually, let's think about this differently:
-        // The streaming hasher maintains a list of "pending" subtree roots
-        // These are combined right-to-left at the end
-        // This is like having a right-skewed tree at the top
-
-        // Compute the pending list at the end of streaming
-        List<byte[]> pendingList = new ArrayList<>();
-        for (int i = 0; i < n; i++) {
-            pendingList.add(leaves.get(i));
-            for (long idx = i; (idx & 1L) == 1; idx >>= 1) {
-                byte[] y = pendingList.remove(pendingList.size() - 1);
-                byte[] x = pendingList.remove(pendingList.size() - 1);
-                pendingList.add(hashInternalNode(x, y));
-            }
-        }
-
-        // pendingList now contains the intermediate state
-        // These are roots of complete binary subtrees of decreasing size (reading left to right)
-        // The final fold combines them right-to-left
-
-        // Build the complete tree structure including the fold
-        buildCompleteTreeWithFold(leaves, pendingList);
-    }
-
-    /**
-     * Build a complete tree structure including the final right-to-left fold.
-     */
-    private void buildCompleteTreeWithFold(List<byte[]> leaves, List<byte[]> pendingRoots) {
-        // Clear all levels
-        while (levels.size() > 1) {
-            levels.remove(levels.size() - 1);
-        }
-
-        if (leaves.size() <= 1) {
-            return;
-        }
-
-        // The tree structure for StreamingHasher is:
-        // - Perfect binary subtrees for each power-of-2 chunk of leaves
-        // - These subtree roots are then combined right-to-left
-
-        // For simplicity and to support getMerklePath, we build a standard structure
-        // but adjust the top to match the fold
-
-        // Standard level-by-level build
-        List<byte[]> currentLevel = new ArrayList<>(leaves);
-
-        while (currentLevel.size() > 1) {
-            List<byte[]> nextLevel = new ArrayList<>();
-
-            for (int i = 0; i < currentLevel.size(); i += 2) {
-                if (i + 1 < currentLevel.size()) {
-                    nextLevel.add(hashInternalNode(currentLevel.get(i), currentLevel.get(i + 1)));
-                } else {
-                    nextLevel.add(currentLevel.get(i));
-                }
-            }
-
-            levels.add(nextLevel);
-            currentLevel = nextLevel;
-        }
-
-        // Now fix up the top levels to match the fold
-        // The issue is that for odd counts, simple pairing doesn't match streaming
-
-        // For streaming, if we have pending roots [A, B, C] (left to right),
-        // the final root is hash(A, hash(B, C))
-        // But simple pairing would give hash(hash(A, B), C)
-
-        // To handle this properly for Merkle paths, we need to restructure the top
-
-        if (pendingRoots.size() > 1) {
-            // Replace the top levels with the fold structure
-            // Remove levels above the complete subtrees
-            // Add new levels for the fold
-
-            // Find the height of each pending subtree
-            // pendingRoots[i] has height = number of trailing 1 bits in binary representation
-            // of the leaf count up to that point
-
-            // For Merkle path purposes, we need to know the sibling at each level
-            // This is complex for the fold structure...
-
-            // Simpler approach: store the fold as additional levels
-            // Each fold step creates a new internal node
-
-            // The fold combines pendingRoots right-to-left:
-            // Start with rightmost, combine with next-to-rightmost, etc.
-
-            // Add fold levels
-            byte[] accumulated = pendingRoots.get(pendingRoots.size() - 1);
-            for (int i = pendingRoots.size() - 2; i >= 0; i--) {
-                byte[] left = pendingRoots.get(i);
-                accumulated = hashInternalNode(left, accumulated);
-
-                // Store this fold step
-                // This is at a level above the subtrees
-                // For path computation, we'd need to track this specially
-
-                // For now, just ensure the root is correct
-            }
-
-            // Replace the top of the tree with the correct root
-            List<byte[]> topLevel = levels.get(levels.size() - 1);
-            if (topLevel.size() == 1) {
-                topLevel.set(0, accumulated);
-            } else {
-                // Multiple nodes at top - add new levels for the fold
-                List<byte[]> foldLevel = new ArrayList<>();
-                foldLevel.add(accumulated);
-                levels.add(foldLevel);
+            // Read pending subtree roots
+            int pendingCount = din.readInt();
+            pendingSubtreeRoots.clear();
+            for (int i = 0; i < pendingCount; i++) {
+                int level = din.readInt();
+                int index = din.readInt();
+                pendingSubtreeRoots.add(new int[] {level, index});
             }
         }
     }
